--- a/CherryBlossomPrediction.ipynb
+++ b/CherryBlossomPrediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b2a4f926",
+   "id": "1bc31d94",
    "metadata": {},
    "source": [
     "# When will the Cherry Trees bloom?\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e91ffc09",
+   "id": "80b0fe89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 472,
-   "id": "711b43a6",
+   "id": "e4a277ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1e086d2",
+   "id": "e538265d",
    "metadata": {},
    "source": [
     "### Missing Vancouver Bloom Day of Year\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 474,
-   "id": "7615540a",
+   "id": "56012fd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38faed7d",
+   "id": "583bf74d",
    "metadata": {},
    "source": [
     "### Temperature Data\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 480,
-   "id": "d2dd51c9",
+   "id": "41e5bc80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 481,
-   "id": "2bd5f23f",
+   "id": "c314ec05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50a0e6dd",
+   "id": "4b96a168",
    "metadata": {},
    "source": [
     "### Exploratory Data Analysis (EDA)\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 310,
-   "id": "d2f9d891",
+   "id": "38794703",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "fb5414f1",
+   "id": "06b61d56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 1034,
-   "id": "4f859072",
+   "id": "7bbc322a",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8774184",
+   "id": "5d10ae21",
    "metadata": {},
    "source": [
     "From the above correlation plot, we see that Quarter and Month shows strong positive correlation with bloom doy. \n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fa3ca31",
+   "id": "1dc2e010",
    "metadata": {},
    "source": [
     "### Timeline snapshot with bloom day of year with temperature"
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "id": "3eb8c2c4",
+   "id": "d43dc6bb",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7189e183",
+   "id": "c3a14c51",
    "metadata": {},
    "source": [
     "From the above timeline plot, we can notice that most of the years showing higher temperature with longer bloom doy. So we finally decided to go with temperature data"
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16f9d590",
+   "id": "3f0ef2fe",
    "metadata": {},
    "source": [
     "### Machine Learning\n",
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "3444e24d",
+   "id": "9b3413d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "5d26c314",
+   "id": "1d17b89c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a80ec0e1",
+   "id": "febfdb77",
    "metadata": {},
    "source": [
     "# Training Model for Washington DC "
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 960,
-   "id": "f8f11213",
+   "id": "7dfd6dc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "943b62b1",
+   "id": "b2ad3764",
    "metadata": {},
    "source": [
     "Below is the snapshot of our temperature data"
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 1036,
-   "id": "e7affe46",
+   "id": "93d29a19",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52aa7ace",
+   "id": "f8e2e4ae",
    "metadata": {},
    "source": [
     "Step size for LSTM. Step size tells the model how many years to investigate all together in order to predict the next record. We choose to look at 10 years of data at a time and do a sliding window of one year for the rest of the data. For example, LSTM will start with data from 1950 to 1960 and then try to predict 1961 data. Then it will take data from 1951 to 1961 and predict 1962 data and so on."
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 870,
-   "id": "0601139c",
+   "id": "7ebcf3dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c85ff77",
+   "id": "0544a6ee",
    "metadata": {},
    "source": [
     "#### Whole process of Training and Testing the model"
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 872,
-   "id": "b0c251fd",
+   "id": "8de867e9",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 989,
-   "id": "2eaa22fc",
+   "id": "ce890fbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 874,
-   "id": "df031f3b",
+   "id": "26ca35fd",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 876,
-   "id": "5ba1fed9",
+   "id": "d5d1cba6",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "514403c6",
+   "id": "72526a85",
    "metadata": {},
    "source": [
     "Since model looks good, lets train on whole data"
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 962,
-   "id": "d8840d86",
+   "id": "48598ff5",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 885,
-   "id": "1e3a7847",
+   "id": "ae5f4ea4",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daf274ec",
+   "id": "ae299343",
    "metadata": {},
    "source": [
     "#### Now the training is complete, we are ready to predict Bloom year of day for the upcoming years"
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 963,
-   "id": "2d153103",
+   "id": "417ddc29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 964,
-   "id": "0633c3e5",
+   "id": "495a97c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e6660ef",
+   "id": "c6fb9f69",
    "metadata": {},
    "source": [
     "# Training Model for Koyto"
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 990,
-   "id": "684e1d26",
+   "id": "51f7ff4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 991,
-   "id": "19f91539",
+   "id": "b8aaaca8",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 992,
-   "id": "580d33ac",
+   "id": "5cf240de",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 993,
-   "id": "1522b7b3",
+   "id": "6431f8a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e56ca1bb",
+   "id": "001a7742",
    "metadata": {},
    "source": [
     "# Training Model for Leistal"
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 999,
-   "id": "7214b080",
+   "id": "36c99ab8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 1000,
-   "id": "6a4e1dcf",
+   "id": "a24cce50",
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 1001,
-   "id": "33874e69",
+   "id": "ce601001",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 1003,
-   "id": "a49ca393",
+   "id": "9254636d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28f2d4b1",
+   "id": "a13be252",
    "metadata": {},
    "source": [
     "# Training Model for Vancouver"
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 1011,
-   "id": "0e572b7d",
+   "id": "0239fdc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 1012,
-   "id": "793d036f",
+   "id": "a0bfbb79",
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 781,
-   "id": "81ad6b26",
+   "id": "04e3aa1d",
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": 1013,
-   "id": "12c57800",
+   "id": "2ff5da59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 1014,
-   "id": "6d6f3ce0",
+   "id": "00b1ba86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 1015,
-   "id": "6576d705",
+   "id": "c2dc314e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe7aab0",
+   "id": "69ef3027",
    "metadata": {},
    "source": [
     "### Final Predictions with some timeline plot\n",
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7590c9b4",
+   "id": "cdcf53b9",
    "metadata": {},
    "source": [
     "### Washington DC Predictions"
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24ebd4dd",
+   "id": "01675a28",
    "metadata": {},
    "source": [
     " <img src=\"data/images/dc.jpg\" style=\"width: 400px; height: 200px;\"/>"
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 1017,
-   "id": "7163fa4e",
+   "id": "2022d780",
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78f79935",
+   "id": "235a094c",
    "metadata": {},
    "source": [
     "### Kyoto Predictions"
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dac5c5fc",
+   "id": "0810438b",
    "metadata": {},
    "source": [
     " <img src=\"data/images/kyoto.jpg\" style=\"width: 400px; height: 200px;\"/>"
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 1018,
-   "id": "dc83c93f",
+   "id": "d1223c2c",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed6f6974",
+   "id": "0c495f95",
    "metadata": {},
    "source": [
     "### Liestal Predictions"
@@ -1145,16 +1145,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "997177e2",
+   "id": "28710028",
    "metadata": {},
    "source": [
-    " <img src=\"data/images/liestal.jpg\" style=\"width: 400px; height: 200px;\"/>"
+    " <img src=\"data/images/liestal.JPG\" style=\"width: 400px; height: 200px;\"/>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1019,
-   "id": "ffef262d",
+   "id": "4a4b0ef5",
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1f82155",
+   "id": "2307e3b1",
    "metadata": {},
    "source": [
     "### Vancouver Predictions"
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49c8955e",
+   "id": "c99071ab",
    "metadata": {},
    "source": [
     " <img src=\"data/images/vancouver.jpg\" style=\"width: 400px; height: 200px;\"/>"
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 1020,
-   "id": "14d75f90",
+   "id": "b49e2b4d",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9383dc86",
+   "id": "5f729b18",
    "metadata": {},
    "source": [
     "### Below is the predicted bloom doy for all the locations"
@@ -1234,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": 1021,
-   "id": "0ed4edcc",
+   "id": "56b206b4",
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cea4791e",
+   "id": "bd9bbb8c",
    "metadata": {},
    "source": [
     "### Exporting results to csv file for submission"
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 1023,
-   "id": "58dd940c",
+   "id": "d5bfb1c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65457756",
+   "id": "de12bac7",
    "metadata": {},
    "source": [
     "#### The code is written in Python. Due to shortage of time, I could not do it in R but this code can easily be developed in R.\n",
